policies/disallow-latest-tag/.test/resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod-pinned
spec:
  containers:
    - name: app
      image: nginx:1.29.0
---
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod-latest
spec:
  containers:
    - name: app
      image: nginx:latest
