policies/disallow-latest-tag/.test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: disallow-latest-tag
policies:
  - ../policy.yaml
resources:
  - resources.yaml
results:
  - policy: disallow-latest-tag
    rule: disallow-latest-tag
    kind: Pod
    resources:
      - good-pod-pinned
    result: pass
  - policy: disallow-latest-tag
    rule: disallow-latest-tag
    kind: Pod
    resources:
      - bad-pod-latest
    result: fail
  - policy: disallow-latest-tag
    rule: require-image-tag
    kind: Pod
    resources:
      - exempt-system-pod
    result: skip
  - policy: disallow-latest-tag
    rule: disallow-latest-tag
    kind: Pod
    resources:
      - exempt-system-pod
    result: skip
